# fuzzy

./: .gitignore  CMakeLists.txt  setup.bash
include/: member_function.hpp
include/fuzzy/: member_function.hpp  operator.hpp  rule.hpp
script/: plottest1.py  plottest2.py
src/test/: test1.cpp  test2.cpp
